syntax = "proto3";

package greet;
option go_package = "./greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message GreetDeadlineRequest {
    Greeting greeting = 1;
}

message GreetDeadlineResponse {
    string result = 1;
}

service GreetService {
    // Unary API
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server Streaming API
    rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse) {};

    // Client Streaming API
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    // Bi-Directional Streaming API
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}

    // gRPC Deadline Example | Unary API
    rpc GreetDeadline(GreetDeadlineRequest) returns (GreetDeadlineResponse) {}
}